<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/about" />

    <TextView
        android:id="@+id/carAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carAuthor" />

    <TextView
        android:id="@+id/carVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carVersion" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carInstructions" />

</LinearLayout>