<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:id="@+id/fragmentLocation">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/News_item_page"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:id="@+id/news_item_title"
        />



        <TextView
            android:id="@+id/news_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/news_item_title"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20dp"

            />

        <TextView
            android:id="@+id/news_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/news_title"
            android:textSize="14sp"
            android:textFontWeight="@android:integer/config_longAnimTime"
            android:textColor="@android:color/holo_red_dark"
            />
    <ImageView
        android:id="@+id/details_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/news_description" />
        <TextView
            android:id = "@+id/url_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/details_image"
            android:layout_above="@+id/Buttons"
            android:textColor="@android:color/holo_purple"/>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_alignParentBottom="true"
    android:id="@+id/Buttons">
    <Button
        android:id="@+id/go_to_url_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/NewsView"/>

    <Button
        android:id="@+id/add_to_favourites_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/NewsSave"/>


    <Button
        android:id="@+id/goback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/Newsback"/>

</LinearLayout>





</RelativeLayout>