<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/carToolbar"/>

    <EditText
        android:id="@+id/carEditLat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_below="@id/carToolbar"
        android:layout_toRightOf="@id/textLat"
        android:hint="@string/latitude"/>

    <EditText
        android:id="@+id/carEditLong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_toRightOf="@id/textLon"
        android:layout_below="@id/carEditLat"
        android:hint="@string/longitude"/>

    <Button
        android:id="@+id/carButtonSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:layout_alignParentStart="true"
        android:layout_below="@id/carEditLong"/>

    <ListView
        android:id="@+id/carListSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/carButtonSearch"
        android:layout_alignParentStart="true" />

    <ProgressBar
        android:id="@+id/carProgressCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_alignBottom="@id/carButtonSearch"
        android:visibility="invisible"
        android:layout_below="@id/carEditLong"/>

    <TextView
        android:id="@+id/textLat"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/carToolbar"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:text="Lat: " />

    <TextView
        android:id="@+id/textLon"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/carEditLat"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:text="Lon: " />


</RelativeLayout>